--- a/index.html
+++ b/index.html
@@ -5,6 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link_active" href="#">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#">посмотреть лоты</a>
+          </li>
+
+          <li class="header__links-list-item">
+            <a class="header__link" href="#">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип"
+        />
+      </a>
+      <address class="address header__address">
+        <a class="address-links" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a class="address-links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <img class="cover__image" src="./images/cover.jpg" alt="cover image" />
+        <h1 class="cover__title">
+          <p class="aligned-text">
+            о<span class="letter-spacing-extended">н<span class="no-letter-spacing">о</span></span>
+          </p>
+          <p class="aligned-text_center">
+            те<span class="letter-spacing-extended">б<span class="no-letter-spacing">е</span></span>
+          </p>
+          <p class="aligned-text_right">
+            <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+          </p>
+        </h1>
+        <h2 class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто<span class="cover__description-text-extended">не верил</span>
+          </p>
+          <button class="bet-button">Сделать ставку</button>
+        </h2>
+      </section>
+      <section class="lots"></section>
+      <section class="about"></section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
