Исправил p в h2 и номер телефона

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         />
       </a>
       <address class="address header__address">
-        <a class="address-links" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a class="address-links" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="address-links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
@@ -43,20 +43,20 @@
         <div class="overlay"></div>
         <img class="cover__image" src="./images/cover.jpg" alt="cover image" />
         <h1 class="cover__title">
-          <p class="aligned-text">
+          <span class="aligned-text">
             о<span class="letter-spacing-extended">н<span class="no-letter-spacing">о</span></span>
-          </p>
-          <p class="aligned-text_center">
+          </span>
+          <span class="aligned-text_center">
             те<span class="letter-spacing-extended">б<span class="no-letter-spacing">е</span></span>
-          </p>
-          <p class="aligned-text_right">
+          </span>
+          <span class="aligned-text_right">
             <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
-          </p>
+          </span>
         </h1>
         <h2 class="cover__description">
-          <p class="cover__description-text">
-            Аукцион вещей, в которые никто<span class="cover__description-text-extended">не верил</span>
-          </p>
+          <span class="cover__description-text">
+            Аукцион вещей, в которые никто <span class="cover__description-text-extended">не верил</span>
+          </span>
           <button class="bet-button">Сделать ставку</button>
         </h2>
       </section>
