карточки плюс замена картинок, взял из макета

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a class="card-link" href="#">
+            <a class="card-link" href="#0">
               <article class="card">
                 <div class="overlay"></div>
                 <img class="card-image" src="./images/card-lot-01.png" alt="Картинка карточки">
@@ -76,7 +76,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link" href="#">
+            <a class="card-link" href="#0">
               <article class="card">
                 <div class="overlay"></div>
                 <img class="card-image" src="./images/card-lot-02.jpg" alt="Картинка карточки">
@@ -86,7 +86,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link" href="#">
+            <a class="card-link" href="#0">
               <article class="card">
                 <div class="overlay"></div>
                 <img class="card-image" src="./images/card-lot-03.png" alt="Картинка карточки">
