--- a/index.html
+++ b/index.html
@@ -1,179 +1,164 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-  </head>
-  <body>
-    <header class="header">
-      <nav class="header__menu">
-        <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link_active">главная</a>
-          </li>
-          <li class="header__links-list-item">
-            <a class="header__link" href="#0">посмотреть лоты</a>
-          </li>
 
-          <li class="header__links-list-item">
-            <a class="header__link" href="#0">об аукционе</a>
-          </li>
-        </ul>
-      </nav>
-      <a class="header__logo" href="#0">
-        <img
-          class="header__logo-image"
-          src="./images/logo-black.svg"
-          alt="Логотип"
-        />
-      </a>
-      <address class="address header__address">
-        <a class="address-links" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="address-links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенграхт 263-265, Амстердам</p>
-      </address>
-    </header>
-    <main>
-      <section class="cover">
-        <div class="overlay"></div>
-        <img class="cover__image" src="./images/cover.jpg" alt="cover image" />
-        <h1 class="cover__title">
-          <span class="aligned-text">
-            о
-            <span class="letter-spacing-extended">
-              н
-              <span class="no-letter-spacing">о</span>
-            </span>
-          </span>
-          <span class="aligned-text_center">
-            те
-            <span class="letter-spacing-extended">
-              б
-              <span class="no-letter-spacing">е</span>
-            </span>
-          </span>
-          <span class="aligned-text_right">
-            <span class="letter-spacing-extended">н</span>
-            ад
-            <span class="no-letter-spacing">о</span>
-          </span>
-        </h1>
-        <h2 class="cover__description">
-          <span class="cover__description-text">
-            Аукцион вещей, в которые никто
-            <span class="cover__description-text-extended">не верил</span>
-          </span>
-          <button class="bet-button">Сделать ставку</button>
-        </h2>
-      </section>
-      <section class="lots">
-        <h2 class="lots__heading">Лоты</h2>
-        <ul class="lots__card-list">
-          <li class="lots__card-list-item">
-            <a class="card-link" href="#0">
-              <article class="card">
-                <div class="overlay"></div>
-                <img
-                  class="card-image"
-                  src="./images/card-lot-01.png"
-                  alt="Картинка карточки"
-                />
-                <h3 class="card__title">
-                  Фильм режиссёра,
-                  <span class="card__title-extended">который бросил</span>
-                  киношколу
-                </h3>
-                <p class="card__text card__text-extended">
-                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                  ставка, если бы вы не знали, что режиссёр — Пол Томас
-                  Андерсон?
-                </p>
-              </article>
-            </a>
-          </li>
-          <li class="lots__card-list-item">
-            <a class="card-link" href="#0">
-              <article class="card">
-                <div class="overlay"></div>
-                <img
-                  class="card-image"
-                  src="./images/card-lot-02.jpg"
-                  alt="Картинка карточки"
-                />
-                <h3 class="card__title">
-                  Книга, где описан один скучный день из жизни рекламного агента
-                </h3>
-                <p class="card__text">
-                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
-                  с переходами на древнеанглийский. В ней одновременно
-                  рассказывается о 16 июня 1904 года и об истории литературы,
-                  начиная с античных времён. И это всё накладывается на
-                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
-                  Джеймса Джойса?
-                </p>
-              </article>
-            </a>
-          </li>
-          <li class="lots__card-list-item">
-            <a class="card-link" href="#0">
-              <article class="card">
-                <div class="overlay"></div>
-                <img
-                  class="card-image"
-                  src="./images/card-lot-03.png"
-                  alt="Картинка карточки"
-                />
-                <h3 class="card__title">
-                  Картина, которую повторит даже 5-летний сын маминой подруги
-                </h3>
-                <p class="card__text">
-                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков<span class="ellipsis">..</span>. Сколько бы вы на
-                  такое поставили, если бы не знали, что это — одна из
-                  революционных работ Кандинского?
-                </p>
-              </article>
-            </a>
-          </li>
-        </ul>
-        <a class="lots__look-more-link">посмотреть больше</a>
-      </section>
-      <section class="about">
-        <div class="about__column">
-          <a href="#0">
-            <img
-              class="about__logo-image"
-              src="./images/logo-white.svg"
-              alt="Логотип на черном фоне"
-            />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+  <link rel="stylesheet" href="./fonts/fonts.css" />
+  <link rel="stylesheet" href="./styles/global.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
+</head>
+
+<body>
+  <header class="header">
+    <nav class="header__menu">
+      <ul class="header__links-list">
+        <li class="header__links-list-item header__links-list-item_no-bullit">
+          <a class="header__link_active">главная</a>
+        </li>
+        <li class="header__links-list-item">
+          <a class="header__link" href="#0">посмотреть лоты</a>
+        </li>
+        <li class="header__links-list-item">
+          <a class="header__link" href="#0">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+    <a class="header__logo" href="#0">
+      <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип" />
+    </a>
+    <address class="address header__address">
+      <a class="address-links" href="tel:+99995555555">+9 999 555 5555</a>
+      <a class="address-links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p>наб. Принсенграхт 263-265, Амстердам</p>
+    </address>
+  </header>
+  <main>
+    <section class="cover">
+      <div class="overlay"></div>
+      <img class="cover__image" src="./images/cover.jpg" alt="cover image" />
+      <h1 class="cover__title">
+        <span class="aligned-text">
+          о<span class="letter-spacing-extended">н<span class="no-letter-spacing">о</span></span>
+        </span>
+        <span class="aligned-text_center">
+          те<span class="letter-spacing-extended">б<span class="no-letter-spacing">е</span></span>
+        </span>
+        <span class="aligned-text_right">
+          <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+        </span>
+      </h1>
+      <h2 class="cover__description">
+        <span class="cover__description-text">
+          Аукцион вещей, в которые никто <span class="cover__description-text-extended">не верил</span>
+        </span>
+        <button class="bet-button">Сделать ставку</button>
+      </h2>
+    </section>
+    <section class="lots">
+      <h2 class="lots__heading">
+        Лоты
+      </h2>
+      <ul class="lots__card-list">
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#0">
+            <article class="card">
+              <div class="overlay"></div>
+              <img class="card-image" src="./images/card-lot-01.png" alt="Картинка карточки">
+              <h3 class="card__title">Фильм режиссёра, <span class="card__title-extended">который бросил</span>
+                киношколу</h3>
+              <p class="card__text card__text-extended">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+            </article>
           </a>
-        </div>
-        <div class="about__column">
-          <h2 class="about__title">Об аукционе</h2>
-          <p class="about__text about__text-extended">
-            Здесь вы не встретите очередное пафосное собрание невероятно
-            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
-            один аукцион. Потому что кому нужен дневник девочки-подростка или
-            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
-            странные вещи, созданные любителями?
-          </p>
-          <p class="about__text">
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё
-            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря на критику,
-            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
-            представить современную культуру. Когда в эти вещи не верил никто,
-            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
-          </p>
-        </div>
-      </section>
-    </main>
-    <footer class="footer"></footer>
-  </body>
+        </li>
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#0">
+            <article class="card">
+              <div class="overlay"></div>
+              <img class="card-image" src="./images/card-lot-02.jpg" alt="Картинка карточки">
+              <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+              <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
+                древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная
+                с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на
+                «Улисса» Джеймса Джойса?</p>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#0">
+            <article class="card">
+              <div class="overlay"></div>
+              <img class="card-image" src="./images/card-lot-03.png" alt="Картинка карточки">
+              <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+                инфузорию-туфельку. Никаких полей, лесов, котиков<span class="ellipsis">..</span>. Сколько бы вы на
+                такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+            </article>
+          </a>
+        </li>
+      </ul>
+      <a class="lots__look-more-link">посмотреть больше</a>
+    </section>
+    <section class="about">
+      <div class="about__column">
+        <a href="#0">
+          <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип на черном фоне">
+        </a>
+      </div>
+      <div class="about__column">
+        <h2 class="about__title">Об аукционе</h2>
+        <p class="about__text about__text-extended">Здесь вы не встретите очередное пафосное собрание невероятно
+          дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен
+          дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные
+          вещи, созданные любителями?</p>
+        <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
+          растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на
+          критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру.
+          Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <address class="address footer__address">
+      <a class="address-links" href="tel:+99995555555">+9 999 555 5555</a>
+      <a class="address-links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p>наб. Принсенграхт 263-265, Амстердам</p>
+    </address>
+    <nav class="footer__menu">
+      <ul class="footer__menu-list">
+        <li class="footer__menu-list-item">
+          <a class="footer__menu__link_active" href="#0">главная</a>
+        </li>
+        <li class="footer__menu-list-item">
+          <a class="footer__menu__link" href="#0">посмотреть лоты</a>
+        </li>
+
+        <li class="footer__menu-list-item">
+          <a class="footer__menu__link" href="#0">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="footer__social-list">
+      <li class="footer__social-list-item">
+        <a class="footer__social-link" href="#0">
+          <img class="footer__social-icon" src="./images/yt.svg" alt="Иконка YouTube">
+        </a>
+      </li>
+      <li class="footer__social-list-item">
+        <a class="footer__social-link" href="#0">
+          <img class="footer__social-icon" src="./images/vk.svg" alt="Иконка VK">
+        </a>
+      </li>
+      <li class="footer__social-list-item">
+        <a class="footer__social-link" href="#0">
+          <img class="footer__social-icon" src="./images/pinterest.svg" alt="Иконка Pinterest">
+        </a>
+      </li>
+    </ul>
+  </footer>
+</body>
+
 </html>
