--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </li>
       </ul>
     </nav>
-    <a class="header__logo" href="#0">
+    <a class="header__logo">
       <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип" />
     </a>
     <address class="address header__address">
@@ -50,12 +50,12 @@
           <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
         </span>
       </h1>
-      <h2 class="cover__description">
-        <span class="cover__description-text">
+      <div class="cover__description">
+        <p class="cover__description-text">
           Аукцион вещей, в которые никто <span class="cover__description-text-extended">не верил</span>
-        </span>
+        </p>
         <button class="bet-button">Сделать ставку</button>
-      </h2>
+      </div>
     </section>
     <section class="lots">
       <h2 class="lots__heading">
@@ -67,9 +67,10 @@
             <article class="card">
               <div class="overlay"></div>
               <img class="card-image" src="./images/card-lot-01.png" alt="Картинка карточки">
-              <h3 class="card__title">Фильм режиссёра, <span class="card__title-extended">который бросил</span>
-                киношколу</h3>
-              <p class="card__text card__text-extended">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+              <h3 class="card__title">
+                Фильм режиссёра, который бросил киношколу
+              </h3>
+              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                 ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
             </article>
           </a>
@@ -94,13 +95,13 @@
               <img class="card-image" src="./images/card-lot-03.png" alt="Картинка карточки">
               <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
               <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
-                инфузорию-туфельку. Никаких полей, лесов, котиков<span class="ellipsis">..</span>. Сколько бы вы на
+                инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на
                 такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
             </article>
           </a>
         </li>
       </ul>
-      <a class="lots__look-more-link">посмотреть больше</a>
+      <a class="lots__look-more-link" href="#0">посмотреть больше</a>
     </section>
     <section class="about">
       <div class="about__column">
@@ -110,14 +111,17 @@
       </div>
       <div class="about__column">
         <h2 class="about__title">Об аукционе</h2>
-        <p class="about__text about__text-extended">Здесь вы не встретите очередное пафосное собрание невероятно
-          дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен
-          дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные
-          вещи, созданные любителями?</p>
-        <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
-          растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на
-          критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру.
-          Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+        <div class="about__text-container">
+          <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен
+            дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные
+            вещи, созданные любителями?</p>
+          <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
+            растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на
+            критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
+            культуру.
+            Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+        </div>
       </div>
     </section>
   </main>
@@ -143,17 +147,17 @@
     </nav>
     <ul class="footer__social-list">
       <li class="footer__social-list-item">
-        <a class="footer__social-link" href="#0">
+        <a class="footer__social-link" href="#0" target="_blank">
           <img class="footer__social-icon" src="./images/yt.svg" alt="Иконка YouTube">
         </a>
       </li>
       <li class="footer__social-list-item">
-        <a class="footer__social-link" href="#0">
+        <a class="footer__social-link" href="#0" target="_blank">
           <img class="footer__social-icon" src="./images/vk.svg" alt="Иконка VK">
         </a>
       </li>
       <li class="footer__social-list-item">
-        <a class="footer__social-link" href="#0">
+        <a class="footer__social-link" href="#0" target="_blank">
           <img class="footer__social-icon" src="./images/pinterest.svg" alt="Иконка Pinterest">
         </a>
       </li>
